# Warden-MCP-security

./: ABOUT.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml  requirements.txt
docs/: workflow.mmd
examples/: clean_manifest.json  poisoned_manifest.json
reports/: benchmark.html  benchmark.json  benchmark.md
src/warden/: __init__.py  __main__.py  cli.py
src/warden/agent/: __init__.py  simulated_agent.py
src/warden/audit/: __init__.py  ledger.py
src/warden/benchmark/: __init__.py  attacks.py  report.py  runner.py
src/warden/benchmark/corpus/: advanced_evasion.yaml  behavioral.yaml  benign.yaml  descriptor_tampering.yaml  least_privilege.yaml  prompt_injection.yaml  tool_poisoning.yaml
src/warden/core/: __init__.py  exceptions.py  models.py  policy.py
src/warden/dashboard/: __init__.py  app.py
src/warden/detectors/: __init__.py  base.py  behavioral.py  injection_detector.py  provenance.py  registry.py  static_analyzer.py
src/warden/engine/: __init__.py  guardrail.py
src/warden/policy/: __init__.py  default_policy.yaml  permissions.py
src/warden/sandbox/: __init__.py  executor.py
src/warden/servers/: __init__.py  hardened_server.py  mcp_server.py  vulnerable_server.py
src/warden_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_benchmark.py  test_core_models.py  test_detectors.py  test_guardrail.py  test_permissions.py  test_sandbox_audit.py
