[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warden-mcp"
version = "0.1.0"
description = "A security guardrail + red-team benchmark for MCP (Model Context Protocol) agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Aryan Rasiwasia" }]
keywords = ["mcp", "security", "ai-safety", "prompt-injection", "tool-poisoning", "red-team", "guardrail"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]

# Runtime dependencies are intentionally minimal so Warden runs fully offline.
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Nicer CLI output; Warden degrades gracefully to plain text if absent.
pretty = ["rich>=13.0"]
# Development / testing.
dev = ["pytest>=7.0", "rich>=13.0"]

[project.scripts]
warden = "warden.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
warden = ["benchmark/corpus/*.yaml", "policy/*.yaml", "dashboard/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
